--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-status-codes": "^2.2.0",
     "mysql2": "^3.6.0",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-local-sequelize": "^0.9.1",
     "sequelize": "^6.32.1",
     "socket.io": "^4.7.2"
