--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "express-validator": "^6.3.0",
     "http": "^0.0.1-security",
     "http-status-codes": "^2.2.0",
+    "memorystore": "^1.6.7",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local-sequelize": "^0.9.1",
     "sequelize": "^6.32.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "store": "^2.0.12"
   }
 }
