--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "buffer": "^6.0.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "http": "^0.0.1-security",
     "http-status-codes": "^2.2.0",
     "memorystore": "^1.6.7",
+    "multer": "^1.4.4",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
